# python-embed-test

./: CMakeLists.txt  Component.cpp  Component.h  Dummy.cpp  Dummy.h  Readme.md  main.cpp  test.py  test2.py  testComponent.py
